--- a/app/templates/sources.html
+++ b/app/templates/sources.html
@@ -6,6 +6,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://bootswatch.com/5/simplex/bootstrap.min.css", rel="stylesheet">
     <link href="./static/css/static.css" rel="stylesheet">
+    
+    <!-- BACKGROUND IMAGE, CHAT GBT-->
+    <style>
+        body {
+            background-image: url('static/images/light_grey_lines_background.jpg');
+            background-size: 25%;
+            background-repeat: repeat;
+            background-attachment: fixed;
+            background-position: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -37,15 +48,25 @@
     </nav>
 
     <!-- add spacing -->
-        <div class="header col-md-12">
-            <h1>Sources</h1>
-        </div>
-    <div class="parent-container">
-        <div class="link-container">
-            <a href="https://www.kaggle.com/datasets/rohanrao/formula-1-world-championship-1950-2020" class="btn btn-outline-primary">Kaggle Dataset: Formula 1 World Championship (1950 - 2024)</a>
-            <a href="https://www.formula1.com">Formula 1 Website</a>
-            <a href="https://public.tableau.com/app/profile/panki.shah/viz/Formula1_0/Formula1">Tableau Example of Formula 1 Dashboard</a>
-            <a href="https://bootswatch.com/simplex/">Bootswatch Simplex Theme</a>
+    <div class="col-md-12 text-center"></div>
+    <br/>
+    <br/>
+    <br/>
+
+    <div class="row justify-content-center">
+        <div class="col-md-8 parent-container d-flex">
+            <div class="link-container flex-fill">
+                <h2>SOURCES</h2>
+                <a href="https://www.kaggle.com/datasets/rohanrao/formula-1-world-championship-1950-2020">Rao, R. (2020). Formula 1 World Championship (1950–2020) [Data set]. Kaggle.</a>
+                <a href="https://www.formula1.com">Formula 1. (n.d.). Formula 1 official website</a>
+                <a href="https://public.tableau.com/app/profile/panki.shah/viz/Formula1_0/Formula1">Shah, P. (2024). Formula 1 visualization. Tableau Public</a>
+                <a href="https://bootswatch.com/simplex/">Bootswatch Simplex Theme</a>
+                <a href="https://media.formula1.com/image/upload/t_16by9South/f_auto/q_auto/v1709392049/trackside-images/2024/F1_Grand_Prix_of_Bahrain/2053149561.jpg.transform/9col-retina/image.jpg">Formula 1. (2024). F1 Grand Prix of Bahrain [Image]</a>
+                <a href="https://media.formula1.com/image/upload/t_16by9Centre/f_auto/q_auto/v1682606473/Teams_1920x1080.jpg.transform/9col-retina/image.jpg">Formula 1. (2023). F1 Grand Prix of Las Vegas: Race [Image]</a>
+                <a href="https://media.formula1.com/image/upload/t_16by9South/f_auto/q_auto/v1700391768/trackside-images/2023/F1_Grand_Prix_of_Las_Vegas___Race/1801966266.jpg.transform/9col-retina/image.jpg">Formula 1. (2023). F1 Grand Prix of Las Vegas: Qualifying [Image]</a>
+                <a href="https://media.formula1.com/image/upload/t_16by9South/f_auto/q_auto/v1708541586/trackside-images/2024/Formula_1_Testing_in_Bahrain___Drivers_Photocall/2028268909.jpg.transform/9col/image.jpg">Formula 1. (2023). F1 Testing in Bahrain [Image]</a>
+                <a href="https://github.com/coryasilva/Leaflet.ExtraMarkers">Custom Markers for Leaflet JS</a>
+            </div>
         </div>
     </div>
 
