--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -6,6 +6,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://bootswatch.com/5/simplex/bootstrap.min.css", rel="stylesheet">
     <link href="./static/css/static.css" rel="stylesheet">
+
+    <!-- BACKGROUND IMAGE, CHAT GBT-->
+    <style>
+        body {
+            background-image: url('static/images/light_grey_lines_background.jpg');
+            background-size: 25%;
+            background-repeat: repeat;
+            background-attachment: fixed;
+            background-position: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -42,7 +53,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-              <h1>About Us</h1>
+              <h1>ABOUT OUR TEAM</h1>
               <br/>
             </div>
         <div class="row">
