--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -25,9 +25,6 @@
     <!-- Leaflet heatmap plugin-->
     <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
 
-    <!-- Leaflet marker plugin
-    <script type="text/javascript" src="static/js/leaflet.extra-markers.min.js"></script> -->
-
     <!-- Marker cluster JavaScript code -->
     <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
 
@@ -39,6 +36,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+    <!-- Special Markers -->
+    <!-- https://github.com/coryasilva/Leaflet.ExtraMarkers/tree/master -->
+    
+    <!-- Extra Markers CSS -->
+    <link rel="stylesheet" href="static/css/leaflet.extra-markers.min.css">
+    <link rel="stylesheet" href="static/css/leaflet.extra-markers.css">
+    <!-- Extra Markers JavaScript code -->
+    <script src="static/js/leaflet.extra-markers.min.js"></script>
+    <script src="static/js/leaflet.extra-markers.js"></script>
+
+    <!-- font library for icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+
+    <!-- BACKGROUND IMAGE, CHAT GBT-->
+    <style>
+        body {
+            background-image: url('static/images/light_grey_lines_background.jpg');
+            background-size: 25%;
+            background-repeat: repeat;
+            background-attachment: fixed;
+            background-position: center;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -73,15 +96,15 @@
     <!-- add spacing -->
     <br/>
 
-       <!-- Dashboard -->
+    <!-- Map -->
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h1>Formula 1 Circuit Map</h1>
+                <h1>FORMULA 1 CIRCUIT MAP</h1>
             </div>
         </div>
-        <hr/>
-        <div class="row center p-2">
+        <!-- Country Dropdown -->
+        <div class="row center p-2 justify-content-center">
             <div class="col-md-3 card text-white bg-primary p-0">
                 <label for="country_filter" class="m-1">Country</label>
                 <select class="form-select " id="country_filter" onchange="optionChanged(this.value)">
@@ -124,12 +147,16 @@
                 </select>
             </div>
         </div>
+
         <hr/>
-        <div class="row">
-            <div class="col-md-12 text-center">
+
+        <!-- MAP -->
+        <div class="row justify-content-center">
+            <div class="col-md-12">
                 <div id="map-container"></div>
             </div>
         </div>
+
     </div>
 
     <br/>
